		 replaces old interfaces 'jack_auto', 'jack_generic' 
		 and 'jack_alsa'; see ecasound(1) for more details
	- added: interactive mode - new commands 'jack-connect', 
		 'jack-disconnect' and 'jack-list-connections'; see 
		 ecasound-iam(1) for details; closes sffeat:2134183
	- added: 'jack_multi', see ecasound(1); closes sffeat:1415822
	- changed: deprecated 'jack_auto', 'jack_generic' and
	           'jack_alsa'
	- changed: numbering of JACK ports created with 'jack' and
	 	   'jack_generic' starts from "_1" separately for 
		   each prefix [dsacre]
        - changed: deprecated 'ai-wave-edit', 'ao-wave-edit' commands
		   and the 'ext-cmd-wave-editor' ecasoundrc field
	- changed: emit a 'subsystem' level trace message when 
	 	   engine state changes to finished
	- changed: interactive mode - minor update to 'status' command
	  	   output
	- changed: compile libecasoundc as PIC code to make it possible
		   to use it from shared libraries; fixes problems 
		   with e.g. Audio::Ecasound on amd64 architecture ;
		   closes sfbug:2505551
	- fixed: do not limit max-gain reported by '-ev' to [1,max]
		 value range
        - fixed: avoid denormal numbers in '-ete' (leads to unusually
		 high CPU load)
	- fixed: 'dump-cop-value' did not work as documented
	- fixed: ECI - signal an error (e.g. eci_error() returns true)
		 if connection is lost to engine process (sync lost
	 	 or an other error)
	- fixed: ecasignalview - exit if engine reports an error
		 during operation
	- fixed: interactive mode - loop devices saved with incorrect 
		 syntax, affects cs-save, cs-save-as and cs-edit ; see
	 	 http://eca.cx/ecasound-list/2009/01/0058.html
	- fixed: problems when seeking back to start with setups using
		 loop devices; closes sfbug:2527049
	- fixed: segfault if using a tone generator input with a fixed
		 lenght, and a seek past the end of stream was performed
        - fixed: aac/ogg/mikmod/mid inputs - once object reached state 